<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ping</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_ping">Create a new Ping</string>
    <string name="event_type">Type of Event</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="select_friends">Select Friends</string>
    <string name="cancel">Cancel</string>
    <string name="invited_friends">Invited Friends</string>
    <string name="blank"></string>
    <string name="title_activity_select_friends">SelectFriendsActivity</string>
    <string name="done">Done</string>
    <string name="title_activity_ping_event">PingEvent</string>
    <string name="date">Date</string>
    <string name="new_ping">Create a new Ping...</string>
    <string name="selected_friends">Selected Friends</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="title_activity_event_messages">EventMessagesActivity</string>
    <string name="contacts_label">Contacts</string>
    <string name="title_activity_select_contact">Select Contacts</string>
    <string name="settings_label">Settings</string>

</resources>