<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_ping"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".NewPingActivity" >

    <!-- android:background="#EDF1FA" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom = "10dp"
            android:paddingLeft = "10dp"
            android:background="@drawable/backwithlightblueborder"
            android:inputType="text" />

        <!-- android:layout_below="@id/title_label" -->
        <!-- android:layout_centerHorizontal="true" -->

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/location" />
        <!-- android:layout_below="@id/title_field" -->

        <EditText
            android:id="@+id/location_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/backwithlightblueborder"
            android:inputType="text"
            android:paddingLeft="10dp" 
            android:paddingBottom ="10dp"/>
        <!-- android:layout_below="@id/location_label" -->
        <!-- android:layout_centerHorizontal="true" -->

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/date" />
        <!-- android:layout_below="@id/location_field" -->

		<DatePicker
		    android:id="@+id/newping_datepicker"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp" 
		    android:calendarViewShown="false"
		    android:layout_gravity="center_horizontal"/>

<!--         <EditText -->
<!--             android:id="@+id/date_field" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="40dp" -->
<!--             android:layout_marginLeft="15dp" -->
<!--             android:layout_marginRight="15dp" -->
<!--             android:background="@drawable/backwithlightblueborder" -->
<!--             android:inputType="text" -->
<!--             android:paddingLeft="10dp" /> -->

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/time" />
        <!-- android:layout_below="@id/location_field" -->
		<TimePicker
		    android:id="@+id/newping_timepicker"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp" 
		    android:calendarViewShown="false"
		    android:layout_gravity="center_horizontal"/>
<!--         <EditText -->
<!--             android:id="@+id/time_field" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="40dp" -->
<!--             android:layout_marginLeft="15dp" -->
<!--             android:layout_marginRight="15dp" -->
<!--             android:background="@drawable/backwithlightblueborder" -->
<!--             android:inputType="text" -->
<!--             android:paddingLeft="10dp" /> -->

        <TextView
            android:id="@+id/selected_friends_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/selected_friends"
            android:visibility="gone" />

        <EditText
            android:id="@+id/friendsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/backwithlightblueborder"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/select_friends_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="#090974"
                android:onClick="selectFriends"
                android:text="@string/select_friends"
                android:textColor="#ffffff" />
            <!-- android:layout_alignParentLeft="true" -->
            <!-- android:layout_below="@+id/time_field" -->

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="#090974"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:textColor="#ffffff" />
            <!-- android:layout_alignParentRight="true" -->
            <!-- android:layout_below="@+id/time_field" -->

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="#090974"
                android:onClick="send"
                android:text="Send"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>